# homenis-bot

./: Cargo.toml
src/: application.rs  handler.rs  main.rs
src/service/: discord.rs  dispatch.rs  mod.rs
