[package]
name = "homenis-bot"
version = "0.1.0"
authors = ["Mitsuru Takigahira <mysticdoll@mysticdoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0.10", features = ["blocking", "json"]}
ws = { version = "^0.9.1", features = ["ssl"] }
openssl = { version = "^0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "^1.4.0"
url = "^2.1"
regex = "^1.3"
